# ray_tracing

./: .gitignore  CMakeLists.txt  Camera.hpp  README.md  a.ppm  input.txt  log1.ppm  log10.ppm  log12.ppm  log2.ppm  log3.ppm  log6.ppm  log8.ppm  main.cpp  out.ppm  out.txt  sky.ppm
Light/: Light.hpp
Object/: Object.hpp  Sphere.cpp
RayTracing/: Camera.hpp  Checker.cpp  Checker.hpp  Data.hpp  File.hpp  Finishing.cpp  Finishing.hpp  Light.cpp  Pigment.cpp  Pigment.hpp  Pigments.cpp  Pigments.hpp  Ray.cpp  Ray.hpp  RayTracing.cpp  RayTracing.hpp  Solid.cpp  Solid.hpp  TextureMap.cpp  TextureMap.hpp  Util.cpp  Util.hpp
RayTracing/Data/: Data.hpp
RayTracing/Data/Camera/: Camera.cpp  Camera.hpp
RayTracing/Data/Finishing/: Finishing.hpp
RayTracing/Data/Light/: Light.hpp
RayTracing/Data/Object/: Object.cpp  Object.hpp  Polyhedron.hpp  Sphere.hpp
RayTracing/Data/Pigment/: Checker.hpp  Pigment.hpp  Solid.hpp  TextureMap.hpp
RayTracing/Object/: Object.hpp  Polyhedron.cpp  Polyhedron.hpp  Sphere.hpp
Util/: File.cpp  File.hpp  Util.hpp
logs/: log9.ppm
logs/development/: log0.ppm  log11.ppm  log4.ppm  log5.ppm
